tests/machine/x/cpp/group_items_iteration.error
line 29: ../../../tests/machine/x/cpp/group_items_iteration.cpp:29:38: error: ‘struct __struct1’ has no member named ‘key’
   29 |   decltype(std::declval<__struct1>().key) tag;
      |                                      ^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:29:38: error: ‘struct __struct1’ has no member named ‘key’
../../../tests/machine/x/cpp/group_items_iteration.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/group_items_iteration.cpp:66:37: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
   66 |     tmp = __append(tmp, __struct3{g.key, total});
      |                                   ~~^~~
      |                                     |
      |                                     std::string {aka std::__cxx11::basic_string<char>}
../../../tests/machine/x/cpp/group_items_iteration.cpp: In lambda function:
../../../tests/machine/x/cpp/group_items_iteration.cpp:72:28: error: request for member ‘tag’ in ‘r’, which is of non-class type ‘int’
   72 |       __items.push_back({r.tag, r});
      |                            ^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:72:24: error: no matching function for call to ‘std::vector<std::pair<int, __struct3> >::push_back(<brace-enclosed initializer list>)’
   72 |       __items.push_back({r.tag, r});
      |       ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from ../../../tests/machine/x/cpp/group_items_iteration.cpp:6:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<int, __struct3>; _Alloc = std::allocator<std::pair<int, __struct3> >; value_type = std::pair<int, __struct3>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<int, __struct3> >::value_type&’ {aka ‘const std::pair<int, __struct3>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<int, __struct3>; _Alloc = std::allocator<std::pair<int, __struct3> >; value_type = std::pair<int, __struct3>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<int, __struct3> >::value_type&&’ {aka ‘std::pair<int, __struct3>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~

 28 | struct __struct3 {
 29 |   decltype(std::declval<__struct1>().key) tag;
 30 |   int total;
